<resources>
    <string name="app_name">Waslla Bank</string>

    <string name="slogan">FREE..FAST..ON DEMAND</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone">Phone Number</string>
    <string name="phone_dots">Phone Number : </string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="email_dots">Email : </string>
    <string name="next">Next</string>
    <string name="car_number">Car Number</string>
    <string name="car_number_dots">Car Number : </string>
    <string name="license_number">License Number</string>
    <string name="feedback">Feedback</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <array name="car_size">
        <item>@string/four</item>
        <item>@string/three</item>
        <item>@string/two</item>
        <item>@string/one</item>
    </array>
    <string name="car_size">Car Size</string>
    <string name="identify_number">ID Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city">City</string>
    <array name="cities">
        <item>Cairo</item>
        <item>Alexandria</item>
    </array>
    <string name="interesting">Interesting</string>

    <!-- invalid data -->
    <string name="invalid_phone_length">Your phone must be 11 number</string>
    <string name="invalid_password_length">Your password must greater than 6 character</string>
    <string name="invalid_name">Name is empty</string>
    <string name="invalid_confirm">Your password and confirm not match</string>
    <string name="invalid_car_number">Car number is empty</string>
    <string name="invalid_license_number">License number is empty</string>
    <string name="invalid_identify_number">ID Number must be 14 number</string>
    <string name="waiting_admin">Dear user please keep signing in to get the approval notification</string>
    <string name="about">About</string>
    <string name="driver">Driver</string>
    <string name="current_requests">Current Requests</string>
    <string name="history">History</string>
    <string name="title_activity_requests">RequestsActivity</string>
    <string name="requests">Requests</string>
    <string name="request">Request</string>
    <string name="past_requests">Past Requests</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <array name="menu">
        <item>Create Trip</item>
        <item>All Trips</item>
        <item>Contact Us</item>
        <item>About</item>
        <item>Logout</item>
    </array>
    <string name="join_trip">Join Trip</string>
    <string name="trip_details">Trip Details</string>
    <string name="details">Details</string>
    <string name="kilo_share">Kilo Share</string>
    <string name="title_activity_request_info">RequestInfoActivity</string>
    <string name="about_us">About US</string>
    <string name="contact_us">Contact us</string>
    <string name="to">To :</string>
    <string name="to_">To </string>
    <string name="from">From :</string>
    <string name="from_">From </string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="get_touch">Get In Touch</string>
    <string name="invalid_subject">Subject Is Empty</string>
    <string name="invalid_message">Message Is Empty</string>
    <string name="thanks">Thanks</string>
    <string name="points">Points</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="when">When ..?</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="change_password">Change Password</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="invalid_location">Please Select Location</string>
    <string name="invalid_date">Please Select Date</string>
    <string name="invalid_time">Please Select Time</string>
    <string name="trip_created">Your Trip Created</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="create_request">Create Request</string>
    <string name="choose_date">Choose Date</string>
    <string name="choose_time">Choose Time</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="send">Send</string>
    <string name="no_requests">No Trip Found</string>
    <string name="current_password">Current Passwrod</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="notifications">Notifications</string>
    <string name="cancel">Cancel</string>
    <string name="view_map">View Map</string>
    <string name="start">Start</string>
    <string name="setting">Setting</string>
    <string name="open_gps">Open Gps</string>
    <string name="try_again">Try Again</string>
    <string name="arrive">arrive</string>
    <string name="join">Join</string>
    <string name="no_user_in_trip">No User In Trip</string>
    <string name="no_notification">No Notification Found</string>
    <string name="comment">Comment</string>
    <string name="enter_rate">Enter your rate</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept -</string>
    <string name="accepted">Accepted</string>
    <string name="users">Users</string>
    <string name="host">Host</string>
    <string name="guests">Guests</string>
    <string name="end_trip">End Trip</string>
    <string name="current_trip">Current Trip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_photo">Select Photo</string>
    <string name="upload">Upload</string>
    <string name="select_car_license">Please Select Car License</string>
    <string name="select_driving_license">Please Select Driving License</string>
    <string name="select_national_id">Please Select National ID</string>
    <string name="logout">Logout</string>
    <string name="trips">Trips</string>
    <string name="past_trips">Past Trips</string>
    <string name="enter_email">Enter your email to receive recovery information</string>
    <string name="invalid_email">please enter your mail</string>
    <string name="upcoming">Upcoming</string>
    <string name="my_trips">My Trips</string>
    <string name="all_trips">All Trips</string>
    <string name="my_upcoming_trips">Upcoming Trips</string>
    <string name="forget_password">Forget Password</string>
</resources>
