<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="60dp"

    android:paddingTop="60dp"
    tools:context="bassiouny.ahmed.waslabank.fragments.view.SplashFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:alpha=".7"
        android:text="@string/slogan"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-15dp"
        android:background="@drawable/round_fill_primary"
        android:paddingEnd="50sp"
        android:paddingStart="50sp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="-15dp"
        android:background="@drawable/round_fill_white"
        android:paddingEnd="50sp"
        android:paddingStart="50sp"
        android:text="@string/sign_in"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
</RelativeLayout>
