<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    tools:context="bassiouny.ahmed.waslabank.fragments.view.SignUpFragment">


    <EditText
        android:id="@+id/et_car_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_fill_white_border"
        android:gravity="center"
        android:hint="@string/car_number"
        android:inputType="text"
        android:nextFocusForward="@id/et_license_number"
        android:padding="10dp"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_license_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_car_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_fill_white_border"
        android:gravity="center"
        android:hint="@string/license_number"
        android:inputType="text"
        android:padding="10dp"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linear_car_size"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_license_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_fill_white_border"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/car_size"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sp_car_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/car_size"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_car_size"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_fill_white"
        android:paddingEnd="50sp"
        android:paddingStart="50sp"
        android:text="@string/next"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />
</RelativeLayout>
