<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/round_fill_white_small_radius"
    tools:context=".activities.view.ForgetPasswordActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/medium_text"
        android:text="@string/forget_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_email"
            android:textSize="@dimen/input_size"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:background="@drawable/round_fill_primary"
        android:paddingEnd="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingStart="50dp"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="@dimen/input_size" />
    <ViewStub
        android:id="@+id/view_stub_progress"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent"
        android:layout="@layout/progress" />
</LinearLayout>