<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="bassiouny.ahmed.waslabank.activities.view.EditProfileActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            android:src="@drawable/person" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_interesting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:hint="@string/interesting"
                android:minHeight="60dp" />
        </android.support.design.widget.TextInputLayout>

        <ViewStub
            android:id="@+id/view_stub_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout="@layout/progress" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_fill_primary"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/input_size" />

        <TextView
            android:id="@+id/btn_change_password"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/input_size" />

    </LinearLayout>
</ScrollView>